include frontend in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,14 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  frontend:
+    build: ./frontend/
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    command: yarn start
+    volumes:
+      - ./frontend/:/app/frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
