--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,72 @@ version: "3.9"
 services:
   db:
     image: postgres
+    hostname: db
     environment:
       - POSTGRES_DB=stack
       - POSTGRES_USER=stack
       - POSTGRES_PASSWORD=stackoverflow
     ports:
       - "5432:5432"
+    networks:
+      - main
+
+  rabbitmq:
+    image: rabbitmq:management
+    hostname: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=stack
+      - RABBITMQ_DEFAULT_PASS=stackoverflow
+      - RABBITMQ_DEFAULT_VHOST=stack_vhost
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - main
+
   backend:
     build: ./backend/
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "
+      python manage.py makemigrations
+      && python manage.py migrate
+      && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app/backend/
     ports:
       - "8000:8000"
+    expose:
+      - "8000"
     depends_on:
       - db
-  frontend:
-    build: ./frontend/
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: yarn start
-    volumes:
-      - ./frontend/:/app/frontend
-    ports:
-      - "3000:3000"
+    networks:
+      - main
+
+  # frontend:
+  #   build: ./frontend/
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   command: yarn start
+  #   volumes:
+  #     - ./frontend/:/app/frontend
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - backend
+  #   networks:
+  #     - main
+
+  celery_worker:
+    build:
+      context: ./backend/
+    command: bash -c "
+      celery worker --help
+      && celery -A backend worker -l INFO -E"
     depends_on:
+      - rabbitmq
       - backend
+      - db
+    networks:
+      - main
+
+networks:
+  main:
