--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     command: bash -c "
       python manage.py makemigrations
       && python manage.py migrate
+      && python manage.py createcachetable
       && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app/backend/
